# stagescript

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  codecov.yaml  pyproject.toml
.github/workflows/: code-quality.yaml
examples/: hamlet.play  intermezzo.play
examples/recursion/: characters.play  main.play  title.play
i18n/: compile-translations.sh  cs_CZ.po  en_US.po
stagescript/: __init__.py  __main__.py  entities.py  i18n.py  log.py  naming.py  parser.py  tokenizer.py  types.py
stagescript/export/: __init__.py  base.py  json.py  markdown.py  odftext.py
tests/: conftest.py  test_exporter.py  test_naming.py  test_parser.py  test_parser_patterns.py  test_tokenizer.py  test_types.py
vscode/screenplay-language-support/: README.md
vscode/stagescript-language-support/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode/stagescript-language-support/syntaxes/: stagescript.tmLanguage.json
